--- a/action_access_control_list/views/menu.xml
+++ b/action_access_control_list/views/menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <menuitem action="ir_protected_action_action"
-        id="menu_ir_protected_action"
+    <menuitem action="ir_action_protected_action"
+        id="menu_ir_action_protected"
         parent="base.menu_security"
         name="Protected Actions"
         sequence="15"/>
@@ -12,5 +12,11 @@
         parent="base.menu_security"
         name="Actions Access Rules"
         sequence="16"/>
+
+    <menuitem action="ir_action_access_filter_action"
+        id="menu_ir_action_access_filter"
+        parent="base.menu_security"
+        name="Actions Access Filters"
+        sequence="17"/>
 
 </odoo>
